--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -6,7 +6,7 @@
  width: 200px;
  margin: 0 auto;
 
- border:  1px solid #fff;
+ border:  1px solid #ffffff;
  padding: 3rem;
  border-radius: 20px;
   background: linear-gradient(45deg, #ff0000, #ff7300, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
